--- a/etherscan/cal_PnL.ipynb
+++ b/etherscan/cal_PnL.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
-    "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions"
+    "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions\n",
+    "'''\n",
+    "data_process.ipynb和data_fetch.ipynb同样功能，但是通过封装函数实现了给日期地址等参数就可以返回数据，更加简洁\n",
+    "添加了pnl的计算，但是对于某些交易判断还是有问题，导致结果计算不完全正确\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,9 +81,121 @@
       "Formatted Transactions: part 1\n",
       "Formatted Transactions: part 2\n",
       "Formatted Transactions: final part\n",
-      "Total unique tokens: 4\n",
-      "List of tokens: ['WLFI' 'cbBTC' 'WETH' 'OPTIMUS']\n",
-      "Total PnL: 843.2596881283655\n"
+      "WLFI: 2 records\n",
+      "+---------------------+-------------+--------+---------------+---------+---------+\n",
+      "| Date                |   timeStamp | Type   |        amount |   price |     pnl |\n",
+      "+=====================+=============+========+===============+=========+=========+\n",
+      "| 2024-10-11 00:57:35 |  1728608255 | 'BUY'  | 2249999999.00 |    0.00 | 1795.30 |\n",
+      "+---------------------+-------------+--------+---------------+---------+---------+\n",
+      "| 2024-11-25 16:13:11 |  1732551191 | 'SELL' | 1000000000.00 |    0.00 |    0.00 |\n",
+      "+---------------------+-------------+--------+---------------+---------+---------+\n",
+      "cbBTC: 38 records\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| Date                |   timeStamp | Type   |   amount |    price |    pnl |\n",
+      "+=====================+=============+========+==========+==========+========+\n",
+      "| 2024-11-29 17:38:35 |  1732901915 | BUY    |     1.71 | 97182.48 |  12.07 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 17:38:59 |  1732901939 | BUY    |     3.77 | 97180.47 |  34.20 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 17:39:23 |  1732901963 | BUY    |     1.71 | 97195.96 | -10.99 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 17:41:35 |  1732902095 | BUY    |     1.71 | 97193.47 |  -6.71 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 17:42:47 |  1732902167 | BUY    |     0.68 | 97193.86 |  -2.94 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 17:58:23 |  1732903103 | BUY    |     0.68 | 97194.59 |  -3.43 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:00:35 |  1732903235 | BUY    |     3.77 | 97174.89 |  55.23 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:00:59 |  1732903259 | BUY    |     1.71 | 97190.93 |  -2.37 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:01:23 |  1732903283 | BUY    |     1.71 | 97169.33 |  34.54 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:04:47 |  1732903487 | BUY    |     0.68 | 97199.46 |  -6.75 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:05:11 |  1732903511 | BUY    |     0.68 | 97187.51 |   1.38 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:07:59 |  1732903679 | BUY    |     0.16 | 97189.08 |   0.07 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:08:47 |  1732903727 | BUY    |     1.71 | 97197.50 | -13.63 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:09:23 |  1732903763 | BUY    |     0.68 | 97183.94 |   3.81 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:10:23 |  1732903823 | BUY    |     3.77 | 97187.08 |   9.29 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:10:47 |  1732903847 | BUY    |     3.77 | 97170.51 |  71.81 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:11:11 |  1732903871 | BUY    |     3.77 | 97173.86 |  59.16 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:11:35 |  1732903895 | BUY    |     1.83 | 97180.67 |  16.20 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 18:11:59 |  1732903919 | BUY    |     1.71 | 97193.65 |  -7.04 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:04:47 |  1732907087 | BUY    |     1.71 | 97186.87 |   4.56 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:05:11 |  1732907111 | BUY    |     1.71 | 97192.80 |  -5.58 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:05:47 |  1732907147 | BUY    |     1.71 | 97177.31 |  20.90 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:06:11 |  1732907171 | BUY    |     1.71 | 97186.73 |   4.80 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:06:47 |  1732907207 | BUY    |     1.71 | 97181.71 |  13.38 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:07:35 |  1732907255 | BUY    |     1.71 | 97188.21 |   2.28 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:08:35 |  1732907315 | BUY    |     0.68 | 97196.56 |  -4.79 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:11:35 |  1732907495 | BUY    |     0.16 | 97184.30 |   0.86 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:12:47 |  1732907567 | BUY    |     1.71 | 97175.01 |  24.84 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:13:11 |  1732907591 | BUY    |     3.77 | 97177.88 |  43.96 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:13:35 |  1732907615 | BUY    |     1.71 | 97176.06 |  23.05 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:14:11 |  1732907651 | BUY    |     1.71 | 97187.41 |   3.64 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:14:59 |  1732907699 | BUY    |     3.77 | 97171.47 |  68.13 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:15:35 |  1732907735 | BUY    |     3.77 | 97163.90 |  96.72 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:15:59 |  1732907759 | BUY    |     3.77 | 97164.64 |  93.90 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:16:23 |  1732907783 | BUY    |     3.77 | 97164.42 |  94.73 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:16:47 |  1732907807 | BUY    |     3.77 | 97166.99 |  85.04 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:17:11 |  1732907831 | BUY    |     3.77 | 97181.86 |  28.95 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "| 2024-11-29 19:17:35 |  1732907855 | BUY    |    24.04 | 97189.54 |   0.00 |\n",
+      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "WETH: 3 records\n",
+      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
+      "| Date                |   timeStamp | Type   |   amount |       price |         pnl |\n",
+      "+=====================+=============+========+==========+=============+=============+\n",
+      "| 2024-12-01 23:44:23 |  1733096663 | 'BUY'  |     0.02 | 97499017.60 | -1759783.58 |\n",
+      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
+      "| 2024-12-06 20:22:35 |  1733516555 | BUY    |   612.25 |     4083.36 |     -492.25 |\n",
+      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
+      "| 2024-12-06 20:22:59 |  1733516579 | BUY    |   612.35 |     4082.56 |        0.00 |\n",
+      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
+      "OPTIMUS: 1 records\n",
+      "+---------------------+-------------+--------+----------+---------+-------+\n",
+      "| Date                |   timeStamp | Type   |   amount |   price |   pnl |\n",
+      "+=====================+=============+========+==========+=========+=======+\n",
+      "| 2024-12-11 18:13:11 |  1733940791 | 'BUY'  | 10000.00 |  218.75 |     0 |\n",
+      "+---------------------+-------------+--------+----------+---------+-------+\n",
+      "+---------+-------------+\n",
+      "| token   |   total_pnl |\n",
+      "+=========+=============+\n",
+      "| WLFI    |     1795.30 |\n",
+      "+---------+-------------+\n",
+      "| cbBTC   |      843.26 |\n",
+      "+---------+-------------+\n",
+      "| WETH    | -1760275.83 |\n",
+      "+---------+-------------+\n",
+      "| OPTIMUS |        0.00 |\n",
+      "+---------+-------------+\n"
      ]
     }
    ],
@@ -102,17 +218,28 @@
     "# print(tabulate(summary, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
     "unique_tokens_count = record_df_2[\"token_symbol\"].nunique()\n",
     "\n",
-    "# 查看所有的代币种类\n",
     "unique_tokens = record_df_2[\"token_symbol\"].unique()\n",
+    "results = []\n",
     "\n",
-    "# 打印结果\n",
-    "print(f\"Total unique tokens: {unique_tokens_count}\")\n",
-    "print(f\"List of tokens: {unique_tokens}\")\n",
+    "for token in unique_tokens:\n",
+    "    token_df = record_df_2[record_df_2[\"formatted_record\"].str.contains(fr\"\\b{token}\\b\", regex=True)]\n",
+    "    print(f\"{token}: {len(token_df)} records\")\n",
     "\n",
-    "BTC_record_df = record_df_1[record_df_1[\"formatted_record\"].str.contains(r\"\\bcbBTC\\b\", regex=True)]\n",
-    "# print(BTC_record_df['formatted_record'])\n",
-    "pnl_df = calculate_pnl(BTC_record_df)\n",
-    "print(f\"Total PnL: {pnl_df['pnl'].sum()}\")\n",
+    "    pnl_df = calculate_pnl(token_df)\n",
+    "    print(tabulate(pnl_df, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))   \n",
+    "    total_pnl = pnl_df[\"pnl\"].sum()\n",
+    "\n",
+    "    results.append({\"token\": token, \"total_pnl\": total_pnl})\n",
+    "\n",
+    "pnl_summary_df = pd.DataFrame(results)\n",
+    "\n",
+    "print(tabulate(pnl_summary_df, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
+    "\n",
+    "# BTC_record_df = record_df_1[record_df_1[\"formatted_record\"].str.contains(r\"\\bcbBTC\\b\", regex=True)]\n",
+    "# # print(BTC_record_df['formatted_record'])\n",
+    "# pnl_df = calculate_pnl(BTC_record_df)\n",
+    "# print(f\"Total PnL: {pnl_df['pnl'].sum()}\")\n",
+    "\n",
     "\n"
    ]
   },
