--- a/etherscan/etherscan_example.ipynb
+++ b/etherscan/etherscan_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,10 @@
     "    get_erc20_transfers, get_contract_abi, get_contract_source_code, check_contract_execution_status, check_transaction_receipt_status,\\\n",
     "    get_block_and_uncle_rewards, get_block_number_by_timestamp, get_transaction_by_hash, get_transaction_count, get_transaction_receipt,\\\n",
     "    eth_call, get_code, get_logs, get_logs_by_topics, get_logs_with_address_and_topics\n",
+    "    \n",
+    "'''\n",
+    "对于etherscan_functions.py中的函数，我们可以通过以下方式来调用，一些例子：\n",
+    "'''\n",
     "\n",
     "api_key = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\" # free API key, you can get one at https://etherscan.io/myapikey\n",
     "base_url = \"https://api.etherscan.io/v2/api\" # We're using the v2 API 2024/12/12\n",
