--- a/etherscan/moralis.ipynb
+++ b/etherscan/moralis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2622,7 +2622,9 @@
    "source": [
     "import json\n",
     "from moralis import evm_api\n",
-    "\n",
+    "'''\n",
+    "用moralis获取数据的一个参考，在Get ERC20 token transfers by wallet 中会提供summary可以看到交易总结，就不用自己再判断\n",
+    "'''\n",
     "api_key = f\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJub25jZSI6ImIzODFlZmYzLTgzMTYtNDBlYS1hOGEwLWE3ZTc5MmRhY2Y5YyIsIm9yZ0lkIjoiNDIyMzU2IiwidXNlcklkIjoiNDM0MzczIiwidHlwZUlkIjoiYWY5ZTU0MGYtMmRjMS00YTA5LWJmYjYtYmNlOGY1Y2FlZWM0IiwidHlwZSI6IlBST0pFQ1QiLCJpYXQiOjE3MzUwMjQxNDUsImV4cCI6NDg5MDc4NDE0NX0.QU28H1GJLEjQRq1azfj0-9RnPWeqQSPpubsGVf0Ska8\"\n",
     "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\"\n",
     "\n",
@@ -7634,7 +7636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9121,30 +9123,24 @@
     "params = {\n",
     "    \"chain\": \"eth\",\n",
     "    \"address\": ADDRESS,\n",
-    "    \"limit\": 100,  # 每页限制100条\n",
-    "    \"page\": 1      # 从第一页开始\n",
+    "    \"limit\": 100,  # 每页限制100条，最多也只能是100条\n",
+    "    \"page\": 1      \n",
     "}\n",
     "\n",
     "all_results = []\n",
     "while True:\n",
     "    print(f\"Requesting page {params['page']}...\")\n",
     "\n",
-    "    # 发起 API 请求\n",
     "    result = evm_api.token.get_wallet_token_transfers(api_key=api_key, params=params)\n",
     "    transfers = result.get(\"result\", [])\n",
     "\n",
-    "    # 如果当前页无数据，说明到达数据末尾或超出限制\n",
+    "    # 如果这页无数据，说明到达数据末尾或超出限制\n",
     "    if not transfers:\n",
     "        print(f\"No more data at page {params['page']}. Stopping.\")\n",
     "        break\n",
     "\n",
-    "    # 记录当前页的数据\n",
     "    all_results.extend(transfers)\n",
-    "\n",
-    "    # 打印返回的记录数\n",
     "    print(f\"Page {params['page']} returned {len(transfers)} records.\")\n",
-    "\n",
-    "    # 增加页码，继续下一页\n",
     "    params[\"page\"] += 1\n",
     "\n",
     "print(f\"Total records fetched: {len(all_results)}\")"
