--- a/stable_dashboard/data_fetch.ipynb
+++ b/stable_dashboard/data_fetch.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,6 @@
     }
    ],
    "source": [
-    "\n",
     "# you can get the chain list straihgt from the API\n",
     "url = 'https://api.llama.fi/v2/chains'\n",
     "response = requests.get(url)\n",
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +197,7 @@
     "\n",
     "# give df the mapping of the code\n",
     "'''\n",
-    "    这里有个问题，我用的是比较生硬的map，如果有新的chain，就需要手动添加，这个可以通过API来解决？\n",
+    "    直接用map list对应不知道会不会有问题\n",
     "'''\n",
     "\n",
     "def fetch_price_data(chain_name):\n",
