--- a/etherscan/data_process.ipynb
+++ b/etherscan/data_process.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "\n",
+    "'''\n",
+    "data_process.ipynb和data_fetch.ipynb是获取数据以及处理的一个流程，和cal_pnL.ipynb，fetch_process_function.py是同样的作用，后者是将前者的代码整理成一个py文件，方便调用，更加简洁\n",
+    "'''\n",
     "OUTPUT_FILE = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result'\n",
     "api_key = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\" # my free API key, you can get one at https://etherscan.io/myapikey\n",
     "base_url = \"https://api.etherscan.io/v2/api\" # We're using the v2 API 2024/12/12\n",
