--- a/dashboard/dashboard.ipynb
+++ b/dashboard/dashboard.ipynb
@@ -241,7 +241,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1fbb24aee70>"
+       "<IPython.lib.display.IFrame at 0x2a527c30380>"
       ]
      },
      "metadata": {},
@@ -261,8 +261,8 @@
       "2432 2024-12-23  6.718604e+10\n",
       "2433 2024-12-24  6.798493e+10\n",
       "2434 2024-12-25  7.045243e+10\n",
-      "2435 2024-12-26  6.820048e+10\n",
-      "2436 2024-12-27  6.753231e+10\n",
+      "2435 2024-12-26  6.820560e+10\n",
+      "2436 2024-12-27  6.842104e+10\n",
       "\n",
       "[120 rows x 2 columns]\n",
       "           date           tvl\n",
@@ -275,8 +275,8 @@
       "1376 2024-12-23  8.163092e+09\n",
       "1377 2024-12-24  8.408108e+09\n",
       "1378 2024-12-25  8.647214e+09\n",
-      "1379 2024-12-26  8.453967e+09\n",
-      "1380 2024-12-27  8.385248e+09\n",
+      "1379 2024-12-26  8.453969e+09\n",
+      "1380 2024-12-27  8.354606e+09\n",
       "\n",
       "[120 rows x 2 columns]\n",
       "           date           tvl\n",
@@ -290,7 +290,7 @@
       "1726 2024-12-24  7.282857e+09\n",
       "1727 2024-12-25  7.469452e+09\n",
       "1728 2024-12-26  7.292459e+09\n",
-      "1729 2024-12-27  7.368302e+09\n",
+      "1729 2024-12-27  7.412382e+09\n",
       "\n",
       "[120 rows x 2 columns]\n",
       "           date           tvl\n",
@@ -304,7 +304,7 @@
       "1374 2024-12-24  6.530442e+09\n",
       "1375 2024-12-25  6.835338e+09\n",
       "1376 2024-12-26  6.638324e+09\n",
-      "1377 2024-12-27  6.638871e+09\n",
+      "1377 2024-12-27  6.679529e+09\n",
       "\n",
       "[120 rows x 2 columns]\n",
       "           date           tvl\n",
@@ -317,8 +317,8 @@
       "1514 2024-12-23  5.518780e+09\n",
       "1515 2024-12-24  5.605763e+09\n",
       "1516 2024-12-25  5.616352e+09\n",
-      "1517 2024-12-26  5.638395e+09\n",
-      "1518 2024-12-27  5.625663e+09\n",
+      "1517 2024-12-26  5.638423e+09\n",
+      "1518 2024-12-27  5.644716e+09\n",
       "\n",
       "[120 rows x 2 columns]\n",
       "          date           tvl\n",
@@ -331,64 +331,8 @@
       "556 2024-12-23  3.591194e+09\n",
       "557 2024-12-24  3.630780e+09\n",
       "558 2024-12-25  3.732022e+09\n",
-      "559 2024-12-26  3.589571e+09\n",
-      "560 2024-12-27  3.593773e+09\n",
-      "\n",
-      "[120 rows x 2 columns]\n",
-      "           date           tvl\n",
-      "1109 2024-08-30  2.685627e+09\n",
-      "1110 2024-08-31  2.678877e+09\n",
-      "1111 2024-09-01  2.657500e+09\n",
-      "1112 2024-09-02  2.755024e+09\n",
-      "1113 2024-09-03  2.716814e+09\n",
-      "...         ...           ...\n",
-      "1224 2024-12-23  3.008383e+09\n",
-      "1225 2024-12-24  3.029266e+09\n",
-      "1226 2024-12-25  3.108361e+09\n",
-      "1227 2024-12-26  3.001822e+09\n",
-      "1228 2024-12-27  2.998263e+09\n",
-      "\n",
-      "[120 rows x 2 columns]\n",
-      "          date           tvl\n",
-      "136 2024-08-30  1.310786e+08\n",
-      "137 2024-08-31  1.254086e+08\n",
-      "138 2024-09-01  1.428833e+08\n",
-      "139 2024-09-02  1.352065e+08\n",
-      "140 2024-09-03  1.328093e+08\n",
-      "..         ...           ...\n",
-      "251 2024-12-23  1.854440e+09\n",
-      "252 2024-12-24  1.774246e+09\n",
-      "253 2024-12-25  1.811573e+09\n",
-      "254 2024-12-26  1.713250e+09\n",
-      "255 2024-12-27  1.751321e+09\n",
-      "\n",
-      "[120 rows x 2 columns]\n",
-      "          date           tvl\n",
-      "482 2024-08-30  5.853678e+08\n",
-      "483 2024-08-31  5.870263e+08\n",
-      "484 2024-09-01  5.777897e+08\n",
-      "485 2024-09-02  5.715591e+08\n",
-      "486 2024-09-03  5.898726e+08\n",
-      "..         ...           ...\n",
-      "597 2024-12-23  1.703339e+09\n",
-      "598 2024-12-24  1.752526e+09\n",
-      "599 2024-12-25  1.767872e+09\n",
-      "600 2024-12-26  1.685451e+09\n",
-      "601 2024-12-27  1.670413e+09\n",
-      "\n",
-      "[120 rows x 2 columns]\n",
-      "           date           tvl\n",
-      "1304 2024-08-30  8.885322e+08\n",
-      "1305 2024-08-31  8.854732e+08\n",
-      "1306 2024-09-01  8.700754e+08\n",
-      "1307 2024-09-02  8.730266e+08\n",
-      "1308 2024-09-03  8.807498e+08\n",
-      "...         ...           ...\n",
-      "1419 2024-12-23  1.347508e+09\n",
-      "1420 2024-12-24  1.366271e+09\n",
-      "1421 2024-12-25  1.424559e+09\n",
-      "1422 2024-12-26  1.366026e+09\n",
-      "1423 2024-12-27  1.352737e+09\n",
+      "559 2024-12-26  3.590051e+09\n",
+      "560 2024-12-27  3.627399e+09\n",
       "\n",
       "[120 rows x 2 columns]\n",
       "       timestamp      volume       date\n",
@@ -401,10 +345,24 @@
       "2243  1734912000  2510506997 2024-12-23\n",
       "2244  1734998400  2263836146 2024-12-24\n",
       "2245  1735084800  1943092362 2024-12-25\n",
-      "2246  1735171200  2566026831 2024-12-26\n",
-      "2247  1735257600  2570605763 2024-12-27\n",
+      "2246  1735171200  2562802862 2024-12-26\n",
+      "2247  1735257600  2287912309 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
+      "           date           tvl\n",
+      "1109 2024-08-30  2.685627e+09\n",
+      "1110 2024-08-31  2.678877e+09\n",
+      "1111 2024-09-01  2.657500e+09\n",
+      "1112 2024-09-02  2.755024e+09\n",
+      "1113 2024-09-03  2.716814e+09\n",
+      "...         ...           ...\n",
+      "1224 2024-12-23  3.008383e+09\n",
+      "1225 2024-12-24  3.029266e+09\n",
+      "1226 2024-12-25  3.108361e+09\n",
+      "1227 2024-12-26  3.002074e+09\n",
+      "1228 2024-12-27  3.023160e+09\n",
+      "\n",
+      "[120 rows x 2 columns]\n",
       "       timestamp      volume       date\n",
       "1063  1724976000   451452453 2024-08-30\n",
       "1064  1725062400   538471256 2024-08-31\n",
@@ -415,8 +373,8 @@
       "1178  1734912000  2856861242 2024-12-23\n",
       "1179  1734998400  2336077913 2024-12-24\n",
       "1180  1735084800  2578593718 2024-12-25\n",
-      "1181  1735171200  2641328212 2024-12-26\n",
-      "1182  1735257600  2683217057 2024-12-27\n",
+      "1181  1735171200  2567455723 2024-12-26\n",
+      "1182  1735257600  2603434390 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
       "       timestamp     volume       date\n",
@@ -433,6 +391,20 @@
       "1591  1735257600  124835889 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
+      "          date           tvl\n",
+      "136 2024-08-30  1.310786e+08\n",
+      "137 2024-08-31  1.254086e+08\n",
+      "138 2024-09-01  1.428833e+08\n",
+      "139 2024-09-02  1.352065e+08\n",
+      "140 2024-09-03  1.328093e+08\n",
+      "..         ...           ...\n",
+      "251 2024-12-23  1.854440e+09\n",
+      "252 2024-12-24  1.774246e+09\n",
+      "253 2024-12-25  1.811573e+09\n",
+      "254 2024-12-26  1.713250e+09\n",
+      "255 2024-12-27  1.776157e+09\n",
+      "\n",
+      "[120 rows x 2 columns]\n",
       "       timestamp   volume       date\n",
       "2973  1718150400  1821569 2024-06-12\n",
       "2974  1718236800   483770 2024-06-13\n",
@@ -447,6 +419,34 @@
       "3092  1728864000    17059 2024-10-14\n",
       "\n",
       "[120 rows x 3 columns]\n",
+      "          date           tvl\n",
+      "482 2024-08-30  5.853678e+08\n",
+      "483 2024-08-31  5.870263e+08\n",
+      "484 2024-09-01  5.777897e+08\n",
+      "485 2024-09-02  5.715591e+08\n",
+      "486 2024-09-03  5.898726e+08\n",
+      "..         ...           ...\n",
+      "597 2024-12-23  1.703339e+09\n",
+      "598 2024-12-24  1.752526e+09\n",
+      "599 2024-12-25  1.767872e+09\n",
+      "600 2024-12-26  1.685451e+09\n",
+      "601 2024-12-27  1.671853e+09\n",
+      "\n",
+      "[120 rows x 2 columns]\n",
+      "           date           tvl\n",
+      "1304 2024-08-30  8.885322e+08\n",
+      "1305 2024-08-31  8.854732e+08\n",
+      "1306 2024-09-01  8.700754e+08\n",
+      "1307 2024-09-02  8.730266e+08\n",
+      "1308 2024-09-03  8.807498e+08\n",
+      "...         ...           ...\n",
+      "1419 2024-12-23  1.347508e+09\n",
+      "1420 2024-12-24  1.366271e+09\n",
+      "1421 2024-12-25  1.424559e+09\n",
+      "1422 2024-12-26  1.366036e+09\n",
+      "1423 2024-12-27  1.360588e+09\n",
+      "\n",
+      "[120 rows x 2 columns]\n",
       "       timestamp       volume       date\n",
       "1441  1724976000    601855567 2024-08-30\n",
       "1442  1725062400    442307718 2024-08-31\n",
@@ -457,8 +457,8 @@
       "1556  1734912000   2243478319 2024-12-23\n",
       "1557  1734998400   3588374034 2024-12-24\n",
       "1558  1735084800  23627222658 2024-12-25\n",
-      "1559  1735171200  23830770372 2024-12-26\n",
-      "1560  1735257600  23041020725 2024-12-27\n",
+      "1559  1735171200  23828375608 2024-12-26\n",
+      "1560  1735257600    347761809 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
       "      timestamp      volume       date\n",
@@ -471,8 +471,8 @@
       "511  1734912000  2026279014 2024-12-23\n",
       "512  1734998400  1651803599 2024-12-24\n",
       "513  1735084800  1297094948 2024-12-25\n",
-      "514  1735171200  1478280749 2024-12-26\n",
-      "515  1735257600  1478029334 2024-12-27\n",
+      "514  1735171200  1453470792 2024-12-26\n",
+      "515  1735257600  1276736346 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
       "       timestamp      volume       date\n",
@@ -485,8 +485,8 @@
       "1210  1734912000  1136673629 2024-12-23\n",
       "1211  1734998400   807167717 2024-12-24\n",
       "1212  1735084800   618725828 2024-12-25\n",
-      "1213  1735171200   759529343 2024-12-26\n",
-      "1214  1735257600   747981528 2024-12-27\n",
+      "1213  1735171200   744340452 2024-12-26\n",
+      "1214  1735257600   718694129 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
       "     timestamp     volume       date\n",
@@ -499,8 +499,8 @@
       "95  1734912000  375034673 2024-12-23\n",
       "96  1734998400  319403848 2024-12-24\n",
       "97  1735084800  310480616 2024-12-25\n",
-      "98  1735171200  309160671 2024-12-26\n",
-      "99  1735257600  309160671 2024-12-27\n",
+      "98  1735171200  312494147 2024-12-26\n",
+      "99  1735257600  312494147 2024-12-27\n",
       "\n",
       "[100 rows x 3 columns]\n",
       "      timestamp     volume       date\n",
@@ -513,8 +513,8 @@
       "710  1734912000  386007365 2024-12-23\n",
       "711  1734998400  346267967 2024-12-24\n",
       "712  1735084800  296819638 2024-12-25\n",
-      "713  1735171200  318422832 2024-12-26\n",
-      "714  1735257600  147120276 2024-12-27\n",
+      "713  1735171200  317986187 2024-12-26\n",
+      "714  1735257600  167384979 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n",
       "       timestamp     volume       date\n",
@@ -527,140 +527,8 @@
       "1413  1734912000  219895007 2024-12-23\n",
       "1414  1734998400  223434744 2024-12-24\n",
       "1415  1735084800  141785348 2024-12-25\n",
-      "1416  1735171200  128908207 2024-12-26\n",
-      "1417  1735257600  131432587 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp       fee       date\n",
-      "2389  1724976000  25110221 2024-08-30\n",
-      "2390  1725062400  24087677 2024-08-31\n",
-      "2391  1725148800  24448052 2024-09-01\n",
-      "2392  1725235200  25640563 2024-09-02\n",
-      "2393  1725321600  25757021 2024-09-03\n",
-      "...          ...       ...        ...\n",
-      "2504  1734912000  40512092 2024-12-23\n",
-      "2505  1734998400  46523949 2024-12-24\n",
-      "2506  1735084800  46640533 2024-12-25\n",
-      "2507  1735171200  60603334 2024-12-26\n",
-      "2508  1735257600  61208806 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp       fee       date\n",
-      "1321  1724976000   3236833 2024-08-30\n",
-      "1322  1725062400   2646540 2024-08-31\n",
-      "1323  1725148800   2405304 2024-09-01\n",
-      "1324  1725235200   2710491 2024-09-02\n",
-      "1325  1725321600   3051159 2024-09-03\n",
-      "...          ...       ...        ...\n",
-      "1436  1734912000  18268144 2024-12-23\n",
-      "1437  1734998400  19941238 2024-12-24\n",
-      "1438  1735084800  15685791 2024-12-25\n",
-      "1439  1735171200  15720580 2024-12-26\n",
-      "1440  1735257600  19835136 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp      fee       date\n",
-      "1658  1724976000  2905103 2024-08-30\n",
-      "1659  1725062400  2216126 2024-08-31\n",
-      "1660  1725148800  2164698 2024-09-01\n",
-      "1661  1725235200  2411336 2024-09-02\n",
-      "1662  1725321600  2325600 2024-09-03\n",
-      "...          ...      ...        ...\n",
-      "1773  1734912000  2345248 2024-12-23\n",
-      "1774  1734998400  2134578 2024-12-24\n",
-      "1775  1735084800  1813526 2024-12-25\n",
-      "1776  1735171200  1842766 2024-12-26\n",
-      "1777  1735257600  1842766 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp      fee       date\n",
-      "4949  1724976000   470496 2024-08-30\n",
-      "4950  1725062400   378397 2024-08-31\n",
-      "4951  1725148800   366052 2024-09-01\n",
-      "4952  1725235200   454974 2024-09-02\n",
-      "4953  1725321600   485803 2024-09-03\n",
-      "...          ...      ...        ...\n",
-      "5064  1734912000  1076913 2024-12-23\n",
-      "5065  1734998400   959467 2024-12-24\n",
-      "5066  1735084800   779930 2024-12-25\n",
-      "5067  1735171200   778021 2024-12-26\n",
-      "5068  1735257600   778021 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp       fee       date\n",
-      "1460  1724976000   1461983 2024-08-30\n",
-      "1461  1725062400   1175159 2024-08-31\n",
-      "1462  1725148800   1109073 2024-09-01\n",
-      "1463  1725235200   1194167 2024-09-02\n",
-      "1464  1725321600   1186633 2024-09-03\n",
-      "...          ...       ...        ...\n",
-      "1575  1734912000   5078066 2024-12-23\n",
-      "1576  1734998400   5062311 2024-12-24\n",
-      "1577  1735084800  13939617 2024-12-25\n",
-      "1578  1735171200  14473308 2024-12-26\n",
-      "1579  1735257600  14069865 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "      timestamp      fee       date\n",
-      "417  1724976000   528967 2024-08-30\n",
-      "418  1725062400   319461 2024-08-31\n",
-      "419  1725148800   451674 2024-09-01\n",
-      "420  1725235200   421096 2024-09-02\n",
-      "421  1725321600   424151 2024-09-03\n",
-      "..          ...      ...        ...\n",
-      "532  1734912000  2939691 2024-12-23\n",
-      "533  1734998400  3465747 2024-12-24\n",
-      "534  1735084800  2253036 2024-12-25\n",
-      "535  1735171200  2604691 2024-12-26\n",
-      "536  1735257600  2620369 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp      fee       date\n",
-      "1116  1724976000   703530 2024-08-30\n",
-      "1117  1725062400   422047 2024-08-31\n",
-      "1118  1725148800   602004 2024-09-01\n",
-      "1119  1725235200   922167 2024-09-02\n",
-      "1120  1725321600   806157 2024-09-03\n",
-      "...          ...      ...        ...\n",
-      "1231  1734912000  5921293 2024-12-23\n",
-      "1232  1734998400  1249052 2024-12-24\n",
-      "1233  1735084800   747310 2024-12-25\n",
-      "1234  1735171200   827677 2024-12-26\n",
-      "1235  1735257600   821286 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "    timestamp      fee       date\n",
-      "0  1734912000  1472923 2024-12-23\n",
-      "1  1734998400  1360510 2024-12-24\n",
-      "2  1735084800  1047305 2024-12-25\n",
-      "3  1735171200  1274776 2024-12-26\n",
-      "4  1735257600  1274776 2024-12-27\n",
-      "      timestamp     fee       date\n",
-      "255  1724976000   56753 2024-08-30\n",
-      "256  1725062400   44999 2024-08-31\n",
-      "257  1725148800   56179 2024-09-01\n",
-      "258  1725235200   62042 2024-09-02\n",
-      "259  1725321600   68436 2024-09-03\n",
-      "..          ...     ...        ...\n",
-      "370  1734912000  693783 2024-12-23\n",
-      "371  1734998400  588688 2024-12-24\n",
-      "372  1735084800  476646 2024-12-25\n",
-      "373  1735171200  522646 2024-12-26\n",
-      "374  1735257600  462080 2024-12-27\n",
-      "\n",
-      "[120 rows x 3 columns]\n",
-      "       timestamp     fee       date\n",
-      "1298  1724976000  208951 2024-08-30\n",
-      "1299  1725062400  102505 2024-08-31\n",
-      "1300  1725148800  153834 2024-09-01\n",
-      "1301  1725235200  138619 2024-09-02\n",
-      "1302  1725321600  142038 2024-09-03\n",
-      "...          ...     ...        ...\n",
-      "1413  1734912000  422763 2024-12-23\n",
-      "1414  1734998400  397583 2024-12-24\n",
-      "1415  1735084800  293141 2024-12-25\n",
-      "1416  1735171200  276791 2024-12-26\n",
-      "1417  1735257600  269547 2024-12-27\n",
+      "1416  1735171200  128905033 2024-12-26\n",
+      "1417  1735257600  137376645 2024-12-27\n",
       "\n",
       "[120 rows x 3 columns]\n"
      ]
