--- a/etherscan/cal_PnL.ipynb
+++ b/etherscan/cal_PnL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\ndata_process.ipynb和data_fetch.ipynb同样功能，但是通过封装函数实现了给日期地址等参数就可以返回数据，更加简洁\\n添加了pnl的计算，但是对于某些交易判断还是有问题，导致结果计算不完全正确\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -217,13 +217,13 @@
     "OUTPUT_FILE = \"C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\"\n",
     "API_KEY = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\"\n",
     "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}\n",
-    "# transfers_df = fetch_and_save_erc20_transfers(\n",
-    "#         address=ADDRESS,\n",
-    "#         start_date=START_DATE,\n",
-    "#         end_date=END_DATE,\n",
-    "#         output_file=OUTPUT_FILE,\n",
-    "#         offset=1000,\n",
-    "#     )\n",
+    "transfers_df = fetch_and_save_erc20_transfers(\n",
+    "        address=ADDRESS,\n",
+    "        start_date=START_DATE,\n",
+    "        end_date=END_DATE,\n",
+    "        output_file=OUTPUT_FILE,\n",
+    "        offset=1000,\n",
+    "    )\n",
     "transfers_df = pd.read_csv(OUTPUT_FILE + \"/all_erc20_transfers.csv\")\n",
     "record_df_1, record_df_2, record_df_3 = process_transactions(transfers_df, OUTPUT_FILE, ADDRESS, BASE_TOKENS)\n",
     "# print(tabulate(summary, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
