--- a/etherscan/cal_PnL.ipynb
+++ b/etherscan/cal_PnL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\ndata_process.ipynb和data_fetch.ipynb同样功能，但是通过封装函数实现了给日期地址等参数就可以返回数据，更加简洁\\n添加了pnl的计算，但是对于某些交易判断还是有问题，导致结果计算不完全正确\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-07 11:28:34,392 - INFO - Start block: 21339732, End block: 21382703\n",
+      "2025-01-07 11:28:34,393 - INFO - Fetching ERC20 transfers from block 21339732 to 21382703...\n",
+      "2025-01-07 11:28:37,118 - INFO - Page 1: Retrieved 119 transactions.\n",
+      "2025-01-07 11:28:38,148 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
+      "2025-01-07 11:28:38,150 - INFO - Final dataset contains 119 unique transactions.\n",
+      "2025-01-07 11:28:38,158 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n",
+      "2025-01-07 11:28:38,158 - INFO - Transfers saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -253,84 +266,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                       address  from_count  to_count\n",
-      "0   0x0478aa0f766bbcfd0882ad8ae5df5f0531f06065           2         0\n",
-      "1   0x119ca458c5f91d3815e5f8a29633d709569b4eb3           0         1\n",
-      "2   0x1246e490308db61dca45ead613f47430de3830ad           0         2\n",
-      "3   0x2887f96c5b3dc08dbe1312017310b2f26b228e31           0         2\n",
-      "4   0x2ac62e416ce9fc52394a045b66dee9dead4be053           1         0\n",
-      "5   0x2d732631d248006f94b52af8fd0a610c85894d6a           1         0\n",
-      "6   0x33c59f63771f2ab4c9f20c3955526416f02528ca           0         2\n",
-      "7   0x3b54f4fbfafd0e7167dcd70594e2d1b8bcbfe4e9           0         2\n",
-      "8   0x4125af68487bec121a2b90c0e15d824b53899533           1         0\n",
-      "9   0x4ac3bf54fbbf481c991d2f04bad2ff6393d9eb42           1         0\n",
-      "10  0x5851a4148233d84fcbf255109f99bbdd6c8c9cba           0         2\n",
-      "11  0x5be9a4959308a0d0c7bc0870e319314d8d957dbb         112      4151\n",
-      "12  0x6ae4eb64fd04e36a006969135f5013cbb0c15285           1         0\n",
-      "13  0x6e3382c4c4a69a3a62b489a456b327b5d301bea6           1         0\n",
-      "14  0x78ff9211317620de95602c9cbed3ae803689e545           1         0\n",
-      "15  0x7b80a4166390e86bd2193ebf3a2256edc545ad73           0         2\n",
-      "16  0x7e99042e82204df12c3d783c6795e8b7ddcf3fce           0         2\n",
-      "17  0x813d37db4330fcf39fa5fb1beb0df603e5b02b80           0         2\n",
-      "18  0x81df2c977b245af2598cfdaa599d3d515390dd9d           0         2\n",
-      "19  0x88888c037df4527933fa8ab203a89e1e6e58db70           1         0\n",
-      "20  0x9008d19f58aabd9ed0d60971565aa8510560ab41          40        73\n",
-      "21  0x90fab54fd77bec60d59844a7d22a3de41b734989           0         2\n",
-      "22  0x92c3619b6297ab3347f936ee31a9c1429cfc8493           0         2\n",
-      "23  0x97f1f8003ad0fb1c99361170310c65dc84f921e3           1         0\n",
-      "24  0xa40dd20c8630d5518e490efc5fb4b59e3cdff3aa           0         1\n",
-      "25  0xb0d28072304f61132d62dcc4078d0d2ddaa73613           0         2\n",
-      "26  0xb72acffe382f496ded908ea1ed16087ddfaa69ef           1         0\n",
-      "27  0xba57a914b20840c2b0df8f4152cca2e4960beff1           0         2\n",
-      "28  0xcee7557702b3e4b72dad6cd93adc51b3c2b34766           1         0\n",
-      "29  0xd250b4888433cc080f510f243b24aea2413e89ef           0         1\n",
-      "30  0xdf4c9370d10b811351a269819c2a79209dc5f7eb           0         1\n",
-      "31  0xe217e15b3c19cc0427f9492dc3bcfe8220afad10        4097         1\n",
-      "32  0xe60ee6c319c4103b9957eea086128dea5d508558           1         0\n",
-      "33  0xed1b00895c5db8ac09e2e94267819ed2f1ae06fb           0         2\n",
-      "34  0xee7f7f53f0d0c8c56a38e97c5a58e4d321a174dc           0         2\n",
-      "35  0xf32e3596f555546acc4ad6ef67e1abf36b134748           0         2\n",
-      "36  0xf7c9c6bfc102e09a64c6b2248c3d4cb8e01360aa           0         2\n"
-     ]
-    }
-   ],
-   "source": [
-    "transfers_df = pd.read_csv(OUTPUT_FILE + \"/all_erc20_transfers.csv\")\n",
-    "# 分别统计 from 和 to 地址\n",
-    "from_address_counts = transfers_df[\"from\"].value_counts().reset_index()\n",
-    "from_address_counts.columns = [\"address\", \"from_count\"]\n",
-    "\n",
-    "to_address_counts = transfers_df[\"to\"].value_counts().reset_index()\n",
-    "to_address_counts.columns = [\"address\", \"to_count\"]\n",
-    "\n",
-    "address_counts = pd.merge(\n",
-    "    from_address_counts, to_address_counts, on=\"address\", how=\"outer\"\n",
-    ").fillna(0)\n",
-    "# merge and convert to int\n",
-    "\n",
-    "address_counts[\"from_count\"] = address_counts[\"from_count\"].astype(int)\n",
-    "address_counts[\"to_count\"] = address_counts[\"to_count\"].astype(int)\n",
-    "\n",
-    "print(address_counts)\n",
-    "address_counts.to_csv(\"from_to_address_counts.csv\", index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
